# PythonLearn

./: Combined_README.md  MakeFile  README.md  backup_today.sql  docker-compose.yaml  docker-compose.yml  dockerruncommand  ilov.py  leader.txt  pgadmin.txt  readMeHelp.md  requirement.txt  requirements.txt
360digi/: Day10.py  Day11.py  (+22 more)
AILearning/: FullReadMe.md  ReadMe.md  global.txt  pyenvsteps.txt  pyproject.toml  requirements.txt  tcsreadme.md
AILearning/Day1/: simple_groq.py  simple_ollama.py
AILearning/Day10/: readMe.md
AILearning/Day11/: readme.md
AILearning/Day11/day_11_rag_implementation/: app.py  groq_client.py  imdb_processed.csv  vector_search.py
AILearning/Day12/: readMe.md
AILearning/Day12/intro_to_ai_agents/Day12/: agent.py  groq_client.py  memory.py  tools.py
AILearning/Day13/: readMe.md
AILearning/Day13/session_13_memomr_of_ai_agents/Day13/: agent.py  groq_client.py  main.py  memory.py
AILearning/Day14/: ReadMe.md
AILearning/Day15/: Tavily (1).json  readMe.md
AILearning/Day16/: readMe.md
AILearning/Day18/: n8n Telegram nodes.json  readMe.md
AILearning/Day3/: 1.general_prompting.py  10.ReAct.py  2.one_shot_prompting.py  3.few_shot_prompting.py  4.system_prompting.py  5.role_prompting.py  6.contextual_prompting.py  7.chain_of_thought.py  8.self_consistency.py  9.tree_of_thought.py  general_prompting.py
AILearning/Day6/: groq_client.py
AILearning/Day7/: chromadb_ex.py  ollama_ex.py  readme.md  vectordb.py
AILearning/Day9/: Readme.md
AILearning/Day_6/: app.py  readme.md
AILearning/Gen AI Workshop/: readMe.txt  test.txt
(+238 files in other folders)
